<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbarStyle="insideOverlay"
            android:scrollbarAlwaysDrawVerticalTrack="false">
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:gravity="left">

        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                >
            <TextView android:text="@string/tvServiceState" style="@style/labelStyleRight"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:gravity="left"/>
            <TextView android:id="@+id/serviceState_info" style="@style/labelStyleRight"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:gravity="left"
                    />
        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView android:text="@string/tvCellLocation" style="@style/labelStyleRight"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>
            <TextView android:id="@+id/cellLocation_info" style="@style/textStyle"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView android:text="@string/tvCallState" style="@style/labelStyleRight"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>
            <TextView android:id="@+id/callState_info" style="@style/textStyle"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView android:text="@string/tvConnState" style="@style/labelStyleRight"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>
            <TextView android:id="@+id/connectionState_info" style="@style/textStyle"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView android:text="@string/tvSignalLevel" style="@style/labelStyleRight"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>
            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="horizontal">
                <ProgressBar android:id="@+id/signalLevel" style="@style/progressStyle"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"/>
                <TextView android:id="@+id/signalLevelInfo" style="@style/textSmallStyle"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"/>
            </LinearLayout>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView android:text="@string/strData" style="@style/labelStyleRight"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>
            <ImageView android:id="@+id/dataDirection" style="@style/imageStyle"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView android:id="@+id/device_info" style="@style/labelStyleLeft"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>
        </TableRow>
    </TableLayout>
</ScrollView>